# Simplewalker-bot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: walker.hpp
launch/: simple_walker.launch
results/: cppcheck.txt  cpplint.txt
src/: main.cpp  walker.cpp
world/: myworld
